--- a/src/lib/shelf/playground/playground.scss
+++ b/src/lib/shelf/playground/playground.scss
@@ -2,10 +2,29 @@
   @include flex-align-v-nowrap;
   width: 100%;
   height: 100%;
-  > section {
+  > .part-sub-event {
+    @include flex-align;
+    @include font-fixed($sz: 10px);
     position: relative;
-  }
-  .part-arena {
-    min-height: 300px;
+    padding: 0 1em;
+    .event-icon {
+      font-size: 16px;
+    }
+    .event-time {
+      color: var(--ti-color-track);
+      font-size: 0.9em;
+      padding: 0 0.5em;
+      cursor: pointer;
+      &:hover {
+        color: var(--ti-color-secondary);
+      }
+    }
+    .event-name {
+      color: var(--ti-color-primary);
+      padding-right: 0.5em;
+    }
+    .event-args {
+      color: var(--ti-color-track);
+    }
   }
 }
