--- a/src/lib/action/actionbar/bar.scss
+++ b/src/lib/action/actionbar/bar.scss
@@ -35,6 +35,7 @@
           font-size: 0.8em;
         }
       }
+      // 鼠标响应
       &:hover {
         color: var(--ti-color-secondary-r);
         background-color: var(--ti-color-secondary);
