--- a/src/core/modal/app-modal.scss
+++ b/src/core/modal/app-modal.scss
@@ -1,45 +1,31 @@
-.ti-block {
+.ti-app-modal {
+  background-color: var(--ti-color-card);
+  box-shadow: SZ(5) SZ(5) SZ(20) var(--ti-color-mask-bushy);
   display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr auto;
 
-  > header {
-    @include flex-align-nowrap($ai: stretch);
-    font-size: var(--ti-fontsz-block-head);
+  > footer {
+    @include flex-align-nowrap($ai: stretch, $jc: flex-end);
+    padding: SZ(8);
     background-color: var(--ti-color-bar);
     color: var(--ti-color-bar-f);
-    padding: 1px;
-    > .as-title {
+    > .at-left {
       flex: 1 1 auto;
-      padding: 0.5em;
+      width: 100px;
       overflow: hidden;
-      text-overflow: ellipsis;
     }
-    > .ti-actionbar {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr;
-      > .bar-top-group {
-        > .bar-item[item-depth="0"] {
-          > .bar-item-head {
-            border-radius: 0;
-          }
-        }
-      }
-    }
-  } // > header
+  }
 }
 
 //-------------------------------------------------------------
 @mixin __color_by_name($name) {
   &.is-#{$name} {
-    > header {
-      color: var(--ti-color-#{$name}-r);
-      background-color: var(--ti-color-#{$name});
-
-      // 标题菜单组，顶级项目反色
-      > .ti-actionbar > .bar-top-group {
+    > footer {
+      .ti-actionbar > .bar-top-group {
         > .bar-item[item-depth="0"] > .bar-item-head {
-          color: inherit;
-          background-color: inherit;
+          color: var(--ti-color-#{$name}-r);
+          background-color: var(--ti-color-#{$name});
           transition:
             background-color 0.5s,
             color 0.3s;
@@ -53,7 +39,7 @@
   }
 }
 //-------------------------------------------------------------
-.ti-block {
+.ti-app-modal {
   @include __color_by_name(success);
   @include __color_by_name(warn);
   @include __color_by_name(info);
