--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -27,7 +27,7 @@
   --ti-color-hightlight: rgba(160, 160, 160, 0.1);
   --ti-color-hightlight-f: #000;
   --ti-color-light: #fff;
-  --ti-color-dark: rgba(20, 20, 20, 0.1);
+  --ti-color-dark: #b8b8b8;
   /* 内容颜色 */
   --ti-color-primary: #2196f3;
   --ti-color-primary-r: #d0e7fc;
