--- a/src/lib/shelf/layout/grid/style/ti-layout-grid.scss
+++ b/src/lib/shelf/layout/grid/style/ti-layout-grid.scss
@@ -22,7 +22,7 @@
       position: relative;
     }
 
-    @import "./style/grid-adjust-bar";
+    @import './grid-adjust-bar';
   } // > .grid-item {
 
   &.as-card {
