--- a/src/assets/style/_mixins.scss
+++ b/src/assets/style/_mixins.scss
@@ -6,6 +6,7 @@ $f_fixed:
 $f_nice: "Microsoft YaHei", "PingHei", "Helvetica Neue", "Helvetica", "Arial", "Verdana", "sans-serif";
 //-------------------------- zIndex
 $z-above: 1;
+$z-cover: 10;
 $z-over: 100;
 $z-mask: 1000;
 $z-menu: 10000;
