--- a/src/assets/style/measure/comfy.scss
+++ b/src/assets/style/measure/comfy.scss
@@ -14,9 +14,10 @@
   --ti-measure-form-legend-mgn: 1.5em;
 
   --ti-measure-menu-iconsz: 16px;
-  --ti-measure-menu-fontsz: 14px;
+  --ti-measure-menu-fontsz: 12px;
   --ti-measure-menu-lineheight: 2em;
 
+  --ti-fontsz-page: 14px;
   --ti-fontsz-box: 12px;
   --ti-fontsz-label: 1em;
   --ti-fontsz-field: 0.9em;
