--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-@import "./assets/style/app.scss";
+@import './assets/style/app.scss';
 
 :root {
   color-scheme: light dark;
@@ -7,7 +7,6 @@
 
   //font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   @include font-nice;
-  font-size: 16px;
   line-height: 1.5em;
   font-weight: normal;
 
@@ -31,7 +30,7 @@ body,
 }
 
 body {
-  font-size: SZ(16);
+  font-size: var(--ti-fontsz-page);
 }
 
 #app > main.demo-top {
