--- a/src/assets/style/_mixins.scss
+++ b/src/assets/style/_mixins.scss
@@ -11,6 +11,8 @@ $z-over: 100;
 $z-mask: 1000;
 $z-menu: 10000;
 $z-top: 999999;
+//-------------------------- adjust bar size
+$BARSZ: 5px;
 //-------------------------------------------------------------
 //
 //          尺度
