almost done for TiList

--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -18,6 +18,8 @@
   --ti-color-mask-weak: rgba(50, 50, 50, 0.1);
   /* 标记 */
   --ti-color-border-shallow: #eee;
+  --ti-color-border-thin: #ddd;
+  --ti-color-border-weak: #ccc;
   --ti-color-border-dark: #bbb;
   --ti-color-link: #08f;
   --ti-color-link-hover: #ff4081;
