--- a/src/assets/style/measure/comfy.scss
+++ b/src/assets/style/measure/comfy.scss
@@ -25,4 +25,7 @@
   --ti-fontsz-block-head: 0.8em;
   --ti-fontsz-alert: 14px;
   --ti-fontsz-tabs: 12px;
+  --ti-fontsz-s: 12px;
+  --ti-fontsz-m: 14px;
+  --ti-fontsz-b: 16px;
 }
